# 2d-sdf-surface-nets

./: edge-tables.html  edge-tables.js  index.html  main.js  sdf.js  surface-nets.js
wasm/: Cargo.toml
wasm/pkg/: package.json  wasm.d.ts  wasm.js  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
