[package]
name = "wasm"
version = "0.1.0"
authors = ["maku693 <me@maku693.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[profile.release]
lto = true
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
nohash-hasher = "0.1.3"
wee_alloc = { version = "0.4.5", optional = true }
